--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "express": "^4.16.2",
-    "morgan": "^1.9.1"
+    "morgan": "^1.9.1",
+    "node-time-ago": "^1.0.0"
   }
 }
